# universal_compressor

./: Cargo.toml  README.md
src/: bits.rs  elias_omega.rs  lib.rs  lzw.rs  main.rs  number_encoders.rs
src/lzw/: lzw_decoder.rs  lzw_encoder.rs  word.rs
src/number_encoders/: elias.rs  fibbonaci.rs
src/number_encoders/elias/: delta.rs  gamma.rs  omega.rs
