[package]
name = "universal_compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
entropy_calculator = { git = "https://github.com/marcinwilkdev/entropy-calculator" }
crossbeam-channel = "0.5"
